<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background">

    <include
        android:id="@+id/includedDefault"
        layout="@layout/toolbar_filter"
        android:elevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="@dimen/_220sdp"
        android:layout_height="@dimen/_125sdp"
        android:background="@drawable/ic_play_background"
        android:contentDescription="@string/authorization"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/includedDefault">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="@dimen/_175sdp"
                android:layout_height="@dimen/_175sdp"
                android:background="@drawable/ic_profile_login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_content_description_login_fragment"
                style="@style/Description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:text="@string/authorization_description"
                app:layout_constraintEnd_toEndOf="@+id/et_login_fragment_login"
                app:layout_constraintStart_toStartOf="@+id/et_login_fragment_login"
                app:layout_constraintTop_toBottomOf="@+id/imageView4" />

            <EditText
                android:id="@+id/et_login_fragment_login"
                style="@style/EditTextDefault"
                android:layout_width="@dimen/_270sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_24sdp"
                android:autofillHints="email, login"
                android:hint="@string/adress_email"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_content_description_login_fragment" />

            <EditText
                android:id="@+id/et_login_fragment_password"
                style="@style/EditTextDefault"
                android:layout_width="@dimen/_270sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:autofillHints="password"
                android:hint="@string/password"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_login_fragment_login" />

            <TextView
                android:id="@+id/tv_forgot_password_fragment_login"
                style="@style/MoreDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:text="@string/forgot_password"
                app:layout_constraintStart_toStartOf="@+id/et_login_fragment_password"
                app:layout_constraintTop_toBottomOf="@+id/et_login_fragment_password" />

            <ImageButton
                android:id="@+id/ib_enter_fragment_login"
                android:layout_width="0dp"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_24sdp"
                android:background="@color/button_red"
                android:contentDescription="@string/apply"
                app:layout_constraintEnd_toEndOf="@+id/et_login_fragment_password"
                app:layout_constraintStart_toStartOf="@+id/et_login_fragment_password"
                app:layout_constraintTop_toBottomOf="@+id/tv_forgot_password_fragment_login" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/enter"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/ib_enter_fragment_login"
                app:layout_constraintEnd_toEndOf="@+id/ib_enter_fragment_login"
                app:layout_constraintStart_toStartOf="@+id/ib_enter_fragment_login"
                app:layout_constraintTop_toTopOf="@+id/ib_enter_fragment_login" />

            <TextView
                android:id="@+id/textView6"
                style="@style/Description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/havent_account"
                app:layout_constraintStart_toStartOf="@+id/ib_enter_fragment_login"
                app:layout_constraintTop_toBottomOf="@+id/ib_enter_fragment_login" />

            <TextView
                android:id="@+id/tv_register_fragment_login"
                style="@style/MoreDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/registration"
                app:layout_constraintBottom_toBottomOf="@+id/textView6"
                app:layout_constraintStart_toEndOf="@+id/textView6"
                app:layout_constraintTop_toTopOf="@+id/textView6" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>