<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background">

    <include
        android:id="@+id/includedDefault"
        layout="@layout/toolbar_filter"
        android:elevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="@dimen/_220sdp"
        android:layout_height="@dimen/_125sdp"
        android:background="@drawable/ic_play_background"
        android:contentDescription="@string/authorization"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/includedDefault">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_email_fragment_registration"
                style="@style/EditTextDefault"
                android:layout_width="@dimen/_270sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_24sdp"
                android:autofillHints="email, login"
                android:hint="@string/adress_email"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/sp_region_fragment_registration"
                style="@style/SpinnerTheme"
                android:layout_width="@dimen/_270sdp"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:dropDownWidth="@dimen/_270sdp"
                android:popupBackground="@color/white"
                android:popupElevation="2dp"
                android:spinnerMode="dropdown"
                app:layout_constraintEnd_toEndOf="@+id/et_email_fragment_registration"
                app:layout_constraintStart_toStartOf="@+id/et_email_fragment_registration"
                app:layout_constraintTop_toBottomOf="@+id/et_email_fragment_registration" />

            <Spinner
                android:id="@+id/sp_age_fragment_registration"
                style="@style/SpinnerTheme"
                android:layout_width="@dimen/_150sdp"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:dropDownWidth="@dimen/_150sdp"
                android:popupBackground="@color/white"
                android:popupElevation="2dp"
                android:spinnerMode="dropdown"
                android:gravity="start"
                app:layout_constraintStart_toStartOf="@+id/sp_region_fragment_registration"
                app:layout_constraintTop_toBottomOf="@+id/sp_region_fragment_registration" />

            <Spinner
                android:id="@+id/sp_sex_fragment_registration"
                style="@style/SpinnerTheme"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:dropDownWidth="@dimen/_100sdp"
                android:popupBackground="@color/white"
                android:popupElevation="2dp"
                android:spinnerMode="dropdown"
                android:gravity="start"
                app:layout_constraintEnd_toEndOf="@+id/sp_region_fragment_registration"
                app:layout_constraintTop_toBottomOf="@+id/sp_region_fragment_registration" />

            <EditText
                android:id="@+id/et_password_fragment_register"
                style="@style/EditTextDefault"
                android:layout_width="@dimen/_270sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:autofillHints="password"
                android:hint="@string/password"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="@+id/sp_sex_fragment_registration"
                app:layout_constraintStart_toStartOf="@+id/sp_age_fragment_registration"
                app:layout_constraintTop_toBottomOf="@+id/sp_age_fragment_registration" />

            <EditText
                android:id="@+id/et_repeat_password_fragment_register"
                style="@style/EditTextDefault"
                android:layout_width="@dimen/_270sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:autofillHints="password"
                android:hint="@string/repeat_password"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="@+id/et_password_fragment_register"
                app:layout_constraintStart_toStartOf="@+id/et_password_fragment_register"
                app:layout_constraintTop_toBottomOf="@+id/et_password_fragment_register" />


            <ImageButton
                android:id="@+id/ib_enter_fragment_register"
                android:layout_width="0dp"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@color/button_red"
                android:contentDescription="@string/apply"
                app:layout_constraintEnd_toEndOf="@+id/et_repeat_password_fragment_register"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/et_repeat_password_fragment_register"
                app:layout_constraintTop_toBottomOf="@+id/et_repeat_password_fragment_register" />

            <TextView
                android:id="@+id/tv_enter_text_fragment_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/register"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/ib_enter_fragment_register"
                app:layout_constraintEnd_toEndOf="@+id/ib_enter_fragment_register"
                app:layout_constraintStart_toStartOf="@+id/ib_enter_fragment_register"
                app:layout_constraintTop_toTopOf="@+id/ib_enter_fragment_register" />

            <TextView
                android:id="@+id/textView6"
                style="@style/Description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/have_account"
                app:layout_constraintStart_toStartOf="@+id/ib_enter_fragment_register"
                app:layout_constraintTop_toBottomOf="@+id/ib_enter_fragment_register" />

            <TextView
                android:id="@+id/tv_enter_fragment_register"
                style="@style/MoreDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/enter"
                app:layout_constraintBottom_toBottomOf="@+id/textView6"
                app:layout_constraintStart_toEndOf="@+id/textView6"
                app:layout_constraintTop_toTopOf="@+id/textView6" />

            <ProgressBar
                android:id="@+id/pb_fragment_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:indeterminateDrawable="@drawable/progress"
                app:layout_constraintBottom_toBottomOf="@+id/ib_enter_fragment_register"
                app:layout_constraintEnd_toEndOf="@+id/ib_enter_fragment_register"
                app:layout_constraintStart_toStartOf="@+id/ib_enter_fragment_register"
                app:layout_constraintTop_toTopOf="@+id/ib_enter_fragment_register" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>